sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:12: error: ')' expected but '}' found.
    } 
    ^AlgBubbleSort1:18: error: Unmatched closing brace '}' ignored here
}
^