sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  var swapped = true
	while (swapped) {
		swapped = false
		for (i <- 0 to length-2)
			if (plusPetit(i+1,i) {
				echange(i+1,i)
				swapped = true
			}
		} 
	}
          
}